add hover/focus, hide title

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,19 @@ ul {
     list-style: none;
 }
 
+ .visually-hidden {
+     position: absolute;
+     white-space: nowrap;
+     width: 1px;
+     height: 1px;
+     overflow: hidden;
+     border: 0;
+     padding: 0;
+     clip: rect(0 0 0 0);
+     clip-path: inset(50%);
+     margin: -1px;
+ }
+
 
 /* Header styles */
 
@@ -93,10 +106,17 @@ ul {
 
     cursor: pointer;
 }
-
+.hero-button:hover,
+.hero-button:focus
+ {
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
 
 
 /* Sections styles */
+
 
 .benefits-section,
 .activity-section {
@@ -147,6 +167,7 @@ ul {
     letter-spacing: 0.03em;
 
 }
+
     /* Footer */
     .footer-info {
         background-color: var(--background-color-dark);
